premise-core/tests/snapshots/import_snapshots__05_imports_and_metadata.snap
---
source: premise-core/tests/import_snapshots.rs
expression: analysis
---
{
  "imports": {
    "imports": []
  },
  "diagnostics": [
    {
      "severity": "Error",
      "message": "Import missing path"
    }
  ]
}
