premise-core/tests/snapshots/import_snapshots__08_eras_demo.snap
---
source: tests/import_snapshots.rs
expression: analysis
---
{
  "imports": {
    "imports": []
  },
  "diagnostics": []
}
