premise-core/tests/snapshots/import_snapshots__11_template_blocks.snap
---
source: premise-core/tests/import_snapshots.rs
expression: analysis
---
{
  "imports": {
    "imports": []
  },
  "diagnostics": []
}
